# fast-healthchecks

./: .env  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  sitemap.xml  sonar-project.properties
.github/workflows/: 1_lint.yml  1_test.yml  2_bump.yml  2_test.yml  3_bump.yml  3_docs.yml  4_docs.yml  4_pythonpublish.yaml  5_pythonpublish.yaml
api/: index.html
changelog/: index.html
docs/: api.md  index.md
examples/: probes.py
examples/fastapi_example/: main.py
examples/faststream_example/: main.py
examples/litestar_example/: main.py
fast_healthchecks/: __init__.py  compat.py  models.py
fast_healthchecks/checks/: __init__.py  _base.py  function.py  kafka.py  mongo.py  opensearch.py  rabbitmq.py  redis.py  types.py  url.py
fast_healthchecks/checks/postgresql/: __init__.py  asyncpg.py  base.py  psycopg.py
fast_healthchecks/integrations/: __init__.py  base.py  fastapi.py  faststream.py  litestar.py
search/: search_index.json
tests/: utils.py
tests/integration/: conftest.py
tests/integration/checks/: test_function.py  test_kafka.py  test_mongo.py  test_opensearch.py  test_rabbitmq.py  test_redis.py  test_url.py
tests/integration/checks/postgresql/: conftest.py  test_asyncpg.py  test_psycopg.py
tests/integration/integrations/: test_fastapi.py  test_faststream.py  test_litestar.py
tests/unit/: test_imports.py  test_models.py
tests/unit/checks/: test__base.py  test_function.py  test_kafka.py  test_mongo.py  test_opensearch.py  test_rabbitmq.py  test_redis.py  test_url.py
tests/unit/checks/cassettes/: test_url_health_check_failure.yaml  test_url_health_check_success.yaml  test_url_health_check_with_basic_auth_failure.yaml  test_url_health_check_with_basic_auth_success.yaml
tests/unit/checks/postgresql/: test_asyncpg.py  test_psycopg.py
tests/unit/integrations/: test_fastapi.py  test_faststream.py  test_litestar.py
